Improve dude theme.

--- a/cg-app.html
+++ b/cg-app.html
@@ -203,12 +203,12 @@
             },
             searchLimit: 200,
             _commands: {
-                "openSave": {label: "save the graph", "icon": "save"},
-                "openGroup": {label: "add a group", icon: "av:my-library-add"},
-                "openAction": {label: "add an action", icon: "add-box"},
-                "openProperty": {label: "add a property", icon: "add-circle"},
-                "editEntity": {label: "edit the selection", icon: "create", disabled: true},
-                "removeSelection": {label: "remove the selection", icon: "delete", disabled: true}//,
+                "openSave": {label: "save the graph", "icon": "save", "key": "S"},
+                "openGroup": {label: "add a group", icon: "av:my-library-add", "key": "G"},
+                "openAction": {label: "add an action", icon: "add-box", "key": "A"},
+                "openProperty": {label: "add a property", icon: "add-circle", "key": "P"},
+                "editEntity": {label: "edit the selection", icon: "create", key: "E", disabled: true},
+                "removeSelection": {label: "remove the selection", icon: "delete", key: "X", disabled: true}//,
 //                "zoomToFit": {label: "zoom to best fit all objects", icon: "image:crop-free"}//,
                 //"undo": {label: "undo last action", icon: "undo", disabled: true},
                 //"redo": {label: "redo last action", icon: "redo", disabled: true}
