--- a/index.html
+++ b/index.html
@@ -12,18 +12,8 @@
                 bottom: 0;
                 left: 0;
             }
-            #cg-svg {
-                background: #2C2C2C;
-                width: 100%;
-                height: 100%;
-            }
-            .cg-group > rect {
-                fill: rgba(255, 255, 255, 0.5);
-            }
-            .cg-block > rect {
-                fill: #222222;
-            }
         </style>
+        <link rel="stylesheet" href="themes/dude.css">
     </head>
     <body>
         <svg id="cg-svg"></svg>
@@ -34,8 +24,8 @@
                 "cgGroups": [
                     {
                         "cgType": "group",
-                        "cgDescription": "Test",
-                        "cgPosition": [0, 0],
+                        "cgDescription": "Does some initialization...",
+                        "cgPosition": [10, 20],
                         "cgSize": [200, 200],
                         "cgBlocks": ["0"]
                     }
