--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ Authored by Jeremie Taboada <taboada.jeremie@gmail.com>
 </head>
 <body>
 
-<iron-component-page></iron-component-page>
+<iron-component-page src="cg-element.html"></iron-component-page>
 
 </body>
 </html>
